adding ifttt window to UI

--- a/Electron/src/connectedView.html
+++ b/Electron/src/connectedView.html
@@ -20,6 +20,7 @@
     <button class="textButton" id="ScratchButton">Scratch</button>
     <button class="textButton" id="TynkerButton">Tynker</button>
     <button class="textButton" id="CodeStudioButton">Code.org</button>
+    <button class="textButton" id="ThenThatButton">If This..</button>
     <button class="customButton" id="CustomButtonA"></button>
     <button class="customButton" id="CustomButtonB"></button>
     <script>
