fleshing out elements for ifttt

--- a/Electron/src/thenThat.html
+++ b/Electron/src/thenThat.html
@@ -25,7 +25,7 @@
             <!-- Script is going to update loading text -->
         </p>
 
-        <p>Test</p>
+        <p id="msg">Test</p>
         <div id="ExitDialog" class="dialog-overlay">
             <div class="dialog">
                 <div class="dialog-body">
