Added HTML elements to HTML structure and CSS styling to styles.css

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="if-then-div">
     <div class="containers" id="if-container">
-      <div id="if-div"><img src="if-dialog.png" id="if-image"></div>
+      <div id="if-div"><img src="resources/if-dialog.png" id="if-image"></div>
       <select name="events" id="events">
         <option value="NoEvent" selected="selected">Select an Event</option>
         <option value="BlockPlaced">Block Placed</option>
@@ -20,7 +20,7 @@
       </select>
     </div>
     <div class="containers" id="response-container">
-      <div id="then-div"><img src="then-dialog.png" id="then-image"></div>
+      <div id="then-div"><img src="resources/then-dialog.png" id="then-image"></div>
       <select name="response" id="response">
         <option value="NoResp" selected="selected">Select a Response</option>
         <option value="SetTimeDay">Set Time to Day</option>
