updated css; wrote python script to write event data to json file

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+  <div>
+    <h2>Type or copy the below into the Minecraft chat</h2>
+  </div>
+  <div id="connection-div">
+    <input type="text" id="CommandLabel" value="" disabled/>
+    <button type="button" id="CopyButton"></button>
+  </div>
   <div id="if-then-div">
     <div class="containers" id="if-container">
       <div id="if-div"><img src="resources/if-dialog.png" id="if-image"></div>
