--- a/this-that/index.html
+++ b/this-that/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div id="runbutton">
-    <button type="button" src="resources/button.png" id="Runbutton">Run</button>
+    <button type="button" src="resources/button.png" id="RunButton">Run</button>
   </div>
   <script>
       require('./connector.js');
