Quick change to follow Electron JS file standards

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -48,7 +48,7 @@
   </div>
   <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
   <script>
-      require('./connector.js');
+      require('./renderer.js');
   </script>
 </body>
 </html>
