added js files for new window

--- a/this-that/results.html
+++ b/this-that/results.html
@@ -12,5 +12,8 @@
 <body>
     <h1>You've reached the results page</h1>
   <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
+  <script>
+    require("./resultGrab.js");
+  </script>
 </body>
 </html>
