added basic elements to results page to give a starting point

--- a/this-that/results.html
+++ b/this-that/results.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
-    <h1>You've reached the results page</h1>
+  <div id="header-div">
+    <h1>Event Statistics</h1>
+  </div>
+  <div>
+    <h3>Event: &lt;some-event&gt;</h3>
+    <h3>Times Occured: &lt;some-number&gt;</h3>
+  </div>
+  
   <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
   <script>
     require("./resultGrab.js");
