added more CSS styling and HTML structure

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -44,6 +44,7 @@
     </div>
   </div>
   <div id="runbutton">
+    <button type="button" src="resources/button.png" id="CloseButton">Close</button>
     <button type="button" src="resources/button.png" id="RunButton">Run</button>
   </div>
   <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
