--- a/this-that/results.html
+++ b/this-that/results.html
@@ -5,22 +5,26 @@
   <meta charset="UTF-8">
   <title>Minecraft If This, Then That</title>
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="results.css" />
   <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
 </head>
 
 <body>
   <div id="header-div">
-    <h1>Event Statistics</h1>
+    <h1 id="results-title">Event Statistics</h1>
   </div>
-  <div>
-    <h3>Event: &lt;some-event&gt;</h3>
-    <h3>Times Occured: &lt;some-number&gt;</h3>
+  <div id="events-div">
+    <h3 id="event-header"><b>Event:</b> &lt;some-event&gt;</h3><br>
+    <h3 id="occured-header"><b>Times Occured:</b> &lt;some-number&gt;</h3>
   </div>
-  
+  <div id="dismiss-button-div">
+    <button type="button" src="resources/button.png" id="dismiss-button">Dismiss</button>
+  </div>
+
   <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
   <script>
     require("./resultGrab.js");
   </script>
 </body>
+
 </html>
