--- a/this-that/index.html
+++ b/this-that/index.html
@@ -47,7 +47,7 @@
     <button type="button" src="resources/button.png" id="CloseButton">Close</button>
     <button type="button" src="resources/button.png" id="RunButton">Run</button>
   </div>
-  <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
+  <!-- <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script> -->
   <script>
       require('./renderer.js');
   </script>
