--- a/this-that/results.html
+++ b/this-that/results.html
@@ -21,7 +21,7 @@
     <button type="button" src="resources/button.png" id="dismiss-button">Dismiss</button>
   </div>
 
-  <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
+  <!-- <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script> -->
   <script>
     require("./resultGrab.js");
   </script>
