--- a/this-that/results.html
+++ b/this-that/results.html
@@ -22,9 +22,7 @@
   </div>
 
   <!-- <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script> -->
-  <script>
-    require("./resultGrab.js");
-  </script>
+  <script src="./resultGrab.js"></script>
 </body>
 
 </html>
