Keeping script referencing consistent

--- a/this-that/results.html
+++ b/this-that/results.html
@@ -22,7 +22,9 @@
   </div>
 
   <!-- <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script> -->
-  <script src="./resultGrab.js"></script>
+  <script>
+    require("./resultGrab.js");
+  </script>
 </body>
 
 </html>
