added button functionality

--- a/this-that/results.html
+++ b/this-that/results.html
@@ -18,7 +18,7 @@
     <h3 id="occured-header"><b>Times Occured:</b> &lt;some-number&gt;</h3>
   </div>
   <div id="dismiss-button-div">
-    <button type="button" src="resources/button.png" id="dismiss-button">Dismiss</button>
+    <button type="button" src="resources/button.png" id="DismissButton">Dismiss</button>
   </div>
 
   <!-- <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script> -->
