Attempting to trigger response upon event

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -37,7 +37,7 @@
       </select> -->
       <select class="custom-select" id="response-selection" data-role="select">
         <option value="NoResp" selected disabled hidden>Select a Response</option>
-        <option value="SetTimeDay">Set Time to Day</option>
+        <option value="SetTimeDay">Change Time</option>
         <option value="MobSpawned">Mob Spawned</option>
         <option value="NewDay">New Day</option>
     </select>
