added additional options in the select menu

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -23,23 +23,26 @@
       <select name="events" class="custom-select" id="events">
         <option value="NoEvent" selected disabled hidden>Select an Event</option>
         <option value="BlockPlaced">Block Placed</option>
-        <option value="MobSpawned">Mob Spawned</option>
-        <option value="NewDay">New Day</option>
+        <option value="BlockBroken">Block Broken</option>
+        <option value="ItemSmelted">Item Smelted</option>
+        <option value="ItemCrafted">Item Crafted</option>
+        <option value="ItemAcquired">Item Acquired</option>
+        <option value="ItemDropped">Item Dropped</option>
+        <option value="PlayerDied">On Death</option>
+        <option value="PlayerBounced">On Bounce!</option>
       </select>
     </div>
     <div class="containers" id="response-container">
       <div id="then-div"><img src="resources/then-dialog.png" id="then-image"></div>
-      <!-- <select name="response" id="response">
-        <option value="NoResp" selected="selected">Select a Response</option>
-        <option value="SetTimeDay">Set Time to Day</option>
-        <option value="MobSpawned">Mob Spawned</option>
-        <option value="NewDay">New Day</option>
-      </select> -->
       <select class="custom-select" id="response-selection" data-role="select">
         <option value="NoResp" selected disabled hidden>Select a Response</option>
-        <option value="SetTimeDay">Change Time</option>
-        <option value="MobSpawned">Mob Spawned</option>
-        <option value="NewDay">New Day</option>
+        <option value="ChangeTime">Change Time</option>
+        <option value="SpawnChicken">Spawn Chicken</option>
+        <option value="ChangeWeather">Change Weather</option>
+        <option value="Explode">Cause Explosion!</option>
+        <option value="Tom">Tom and Jerry</option>
+        <option value="Trampoline">Summon Trampoline</option>
+        <option value="Teleport">Teleport</option>
     </select>
     </div>
   </div>
