Added build settings

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -24,12 +24,9 @@
         <option value="NoEvent" selected disabled hidden>Select an Event</option>
         <option value="BlockPlaced">Block Placed</option>
         <option value="BlockBroken">Block Broken</option>
-        <option value="ItemSmelted">Item Smelted</option>
-        <option value="ItemCrafted">Item Crafted</option>
-        <option value="ItemAcquired">Item Acquired</option>
         <option value="ItemDropped">Item Dropped</option>
-        <option value="PlayerDied">On Death</option>
         <option value="PlayerBounced">On Bounce!</option>
+        <option value="CameraUsed">Picture Taken</option>
       </select>
     </div>
     <div class="containers" id="response-container">
