Adding respons action to button press

--- a/this-that/index.html
+++ b/this-that/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
 </head>
 
-<body>
+<body style="-webkit-app-region: drag">
   <div>
     <h2 id="minecraft-title">Type or copy this command into Minecraft chat</h2>
   </div>
