--- a/this-that/results.html
+++ b/this-that/results.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
 </head>
 
-<body>
+<body style="-webkit-app-region: drag">
   <div id="header-div">
     <h1 id="results-title">Event Statistics</h1>
   </div>
