--- a/Minecraft_Data_Sci_UI/index.html
+++ b/Minecraft_Data_Sci_UI/index.html
@@ -9,22 +9,41 @@
     <h1>Minecraft IDE Editor</h1>
     <div class="text-section">
         <div class="text-group">
-            <button type="button" class="button1">button 1</button>
-            <button type="button" class="button2">button 2</button>
-            <textarea name="text-input-1" class="text-area" rows="4"></textarea>
+            <div class="button-group">
+                <button type="button" class="button1">RUN</button>
+                <button type="button" class="button2">REMOVE</button>
+            </div>
+            <textarea name="text-input-1" class="text-area" rows="6"></textarea>
+            <hr>
         </div>
         <div class="text-group">
-            <button type="button" class="button1">button 1</button>
-            <button type="button" class="button2">button 2</button>
-            <textarea name="text-input-2" class="text-area" rows="4"></textarea>
+            <div class="button-group">
+                <button type="button" class="button1">RUN</button>
+                <button type="button" class="button2">REMOVE</button>
+            </div>
+            <textarea name="text-input-2" class="text-area" rows="6"></textarea>
+            <hr>
         </div>
         <div class="text-group">
-            <button type="button" class="button1">button 1</button>
-            <button type="button" class="button2">button 2</button>
-            <textarea name="text-input-3" class="text-area" rows="4"></textarea>
+            <div class="button-group">
+                <button type="button" class="button1">RUN</button>
+                <button type="button" class="button2">REMOVE</button>
+            </div>
+            <textarea name="text-input-3" class="text-area" rows="6"></textarea>
+            <hr>
         </div>
-        <button type="RunButton" class="button3">run</button>>
-
+        <div class="text-group">
+            <div class="button-group">
+                <button type="button" class="button1">RUN</button>
+                <button type="button" class="button2">REMOVE</button>
+            </div>
+            <textarea name="text-input-4" class="text-area" rows="6"></textarea>
+            <hr>
+        </div>
+    </div>
+    <div class="bottom-buttons">
+        <button type="button" id="add-button">ADD</button>
+        <button type="button" id="run-all-button">RUN ALL</button>
     </div>
 
 </body>
