--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -23,11 +23,11 @@
                 <button type="button" class="button1">button 1</button>
                 <button type="button" class="button2">button 2</button>
                 <textarea name="text-input-3" class="text-area" rows="4"></textarea>
-            </div>
-            <button type="RunButton" class="button3">run</button>> -->
+            </div>-->
+            <button type="RunButton" class="button3">run</button> 
         </div>
     </div>
-
+    <script src="js/communicator.js"></script>
 </body>
 
 </html>
