--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -14,16 +14,9 @@
                 <button type="button" class="button2">button 2</button>
                 <textarea id="textbox" name="text-input-1" class="text-area" rows="4"></textarea>
             </div>
-            <div class="text-group">
-                <button type="button" class="button1">button 1</button>
-                <button type="button" class="button2">button 2</button>
-                <textarea name="text-input-2" class="text-area" rows="4"></textarea>
-            </div>
-            <div class="text-group">
-                <button type="button" class="button1">button 1</button>
-                <button type="button" class="button2">button 2</button>
-                <textarea name="text-input-3" class="text-area" rows="4"></textarea>
-            </div>
+	    <div>
+		<p class="output-area"></p>
+	    </div>
             <button type="RunButton" class="button3">run</button> 
         </div>
     </div>
