--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Minecraft IDE Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="structure.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- for pillbox -->
+    <script type="text/javascript" src="./js/structure.js"></script>
 </head>
 
 <body id="bodyEl">
