REdoing JQuery changes

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -30,7 +30,7 @@
                 <button type="button" class="run-button minecraft-button">RUN</button>
                 <button type="button" class="remove-button minecraft-button">REMOVE</button>
             </div>
-            <div class="code-input" contenteditable="true" spellcheck="false"><br /><br /><br /><br /><br /></div>
+            <div class="code-input" contenteditable="true" spellcheck="false" role="textbox"><br /><br /><br /><br /><br /></div>
         </div>
     </div>
     <div id="bottom-section">
