--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -9,8 +9,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- for pillbox -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script type="text/javascript" src="./js/structure.js"></script>
     <script type="text/javascript" src="./js/communicator.js"></script>
+    <script type="text/javascript" src="./js/structure.js"></script>
 </head>
 <body id="bodyEl">
     <div id="header-section">
@@ -30,7 +30,8 @@
                 <button type="button" class="run-button minecraft-button">RUN</button>
                 <button type="button" class="remove-button minecraft-button">REMOVE</button>
             </div>
-            <div class="code-input" contenteditable="true" spellcheck="false" role="textbox"><br /><br /><br /><br /><br /></div>
+            <div class="code-input" contenteditable="true" spellcheck="false" role="textbox"><br><br><br><br><br></div>
+            <div class="code-output"></div>
         </div>
     </div>
     <div id="bottom-section">
