--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -13,6 +13,19 @@
     <script type="text/javascript" src="./js/communicator.js"></script>
 </head>
 <body id="bodyEl">
+    <div id="popUp">
+        <h1>Connect:</h1>
+        <p>Copy and Paste this address in Minecraft to establish connection.</p>
+        <div><input type="text" value="1XX.X.X" id="myInput" readonly><button copy>Copy text</button></div>
+        <button></button>
+    </div>
+    <div id="overlay">
+        <div id="close">X</div>
+        <h1>Connect!</h1>
+        <textarea>Text Here</textarea>
+        <button type="button" id="connection-button" class="minecraft-button">Connection</button>
+    </div>
+
     <div id="header-section">
         <!-- <h1 id="ide-title">REPL</h1> -->
     </div>
