--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -14,15 +14,15 @@
 </head>
 <body id="bodyEl">
     <div id="popUp">
-        <h1>Connect:</h1>
-        <p>Copy and Paste this address in Minecraft to establish connection.</p>
-        <div><input type="text" value="1XX.X.X" id="myInput" readonly><button copy>Copy text</button></div>
+        <h1 style="text-align: center;">Connect:</h1>
+        <p style="text-align:center;">Copy and Paste this address in Minecraft to establish connection.</p>
+        <div style="text-align: center;"><input type="text" value="1XX.X.X" id="myInput" readonly><button copy >Copy text</button></div>
         <button></button>
     </div>
-    <div id="overlay">
+    <div style="text-align: center;"id="overlay">
         <div id="close">X</div>
         <h1>Connect!</h1>
-        <textarea>Text Here</textarea>
+        <textarea >Text Here</textarea>
         <button type="button" id="connection-button" class="minecraft-button">Connection</button>
     </div>
 
