Completing Data Science kernel prerequisites, and required functions for DS

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="./js/communicator.js"></script>
-    <script type="text/javascript" src="./js/structure.js"></script>
+    <!-- <script type="text/javascript" src="./js/structure.js"></script> -->
 </head>
 <body id="bodyEl">
     <div id="popUp">
