--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -16,8 +16,11 @@
     <div id="popUp">
         <h1>Connect:</h1>
         <p>Copy and Paste this Command in Minecraft to a Establish Connection</p>
-        <div><input type="text" value="/connect localhost:8765" id="myInput" readonly><button copy>Copy text</button></div>
-        <button>I'm Connected!</button>
+        <div id="copy-input-div">
+            <input type="text" value="/connect localhost:8765" id="myInput" readonly/>
+            <button id="copy-button"copy></button>
+        </div>
+        <button id="dismiss-button">I'm Connected!</button>
     </div>
 
     <div id="header-section"></div>
