copybutton function modify

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -16,8 +16,8 @@
     <div id="popUp">
         <h1>Connect:</h1>
         <p>Copy and Paste this Command in Minecraft to a Establish Connection</p>
-        <div><input type="text" value="/connect localhost:8765" id="myInput" readonly><button copy>Copy text</button></div>
-        <button>I'm Connected!</button>
+        <div><input type="text" value="/connect localhost:8765" id="myInput" readonly><button onclick="copyButton()" copy>Copy text</button></div>
+        <button id="connect">I'm Connected!</button>
     </div>
 
     <div id="header-section"></div>
