--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -13,12 +13,13 @@
     <script type="text/javascript" src="./js/structure.js"></script>
 </head>
 <body id="bodyEl">
+    <div id="faded"></div>
     <div id="popUp">
         <h1>Connect:</h1>
         <p>Copy and Paste this Command in Minecraft to a Establish Connection</p>
         <div id="copy-input-div">
             <input type="text" value="/connect localhost:8765" id="myInput" readonly/>
-            <button id="copy-button"copy></button>
+            <button id="copy-button" copy></button>
         </div>
         <button id="dismiss-button">I'm Connected!</button>
     </div>
