Added functionality to the I'm Connected! button to remove the pop-up div and faded background on-click.

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -21,7 +21,7 @@
             <input type="text" value="/connect localhost:8765" id="myInput" readonly/>
             <button id="copy-button" copy></button>
         </div>
-        <button id="dismiss-button">I'm Connected!</button>
+        <button id="dismiss-button" onclick="dismissPopUp(this)">I'm Connected!</button>
     </div>
 
     <div id="header-section"></div>
