added adaptive sizing w/ callum help

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -19,7 +19,7 @@
         <p>Copy and Paste this Command in Minecraft to a Establish Connection</p>
         <div id="copy-input-div">
             <input type="text" value="/connect localhost:8765" id="myInput" readonly/>
-            <button id="copy-button" copy></button>
+            <button id="copy-button"></button>
         </div>
         <button id="dismiss-button" onclick="dismissPopUp(this)">I'm Connected!</button>
     </div>
@@ -30,7 +30,7 @@
             <option value="BlockBroken">Block Broken</option>
             <option value="ItemDropped">Item Dropped</option>
         </select>
-        <button type="button" id="update-button" class="minecraft-button">Update</button>
+        <button type="button" id="update-button" class="minecraft-button">Updato</button>
     </div>
     <div id="text-section">
         <div class="text-group">
