sizing changes and other slight edits

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -30,7 +30,7 @@
             <option value="BlockBroken">Block Broken</option>
             <option value="ItemDropped">Item Dropped</option>
         </select>
-        <button type="button" id="update-button" class="minecraft-button">Updato</button>
+        <button type="button" id="update-button" class="minecraft-button">Update</button>
     </div>
     <div id="text-section">
         <div class="text-group">
