--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -6,7 +6,8 @@
     <title>Minecraft IDE Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- for pillbox -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
+    <!-- for pillbox -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="./js/communicator.js"></script>
