added css styling to index and popup menu

--- a/http_simple/static/ajax.html
+++ b/http_simple/static/ajax.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>AJAX From Markdown</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- This is for properly displaying the lesson from markdown -->
     <script src="https://cdn.jsdelivr.net/remarkable/1.7.1/remarkable.min.js"></script>
-    <script src="./js/ajaxTest.js"></script> 
+    <script src="./js/ajaxTest.js"></script>
 </head>
+
 <body>
+    <div id="header-section">
+        <ul class="nav">
+            <li><a href="index.html">IDE</a></li>
+            <li><a href="ajax.html">Lessons</a></li>
+        </ul>
+    </div>
     <button type="button" id="update-lesson" style="position: absolute; top: 50%; left: 50%;">trigger AJAX</button>
     <div id="lesson-container"></div>
 </body>
+
 </html>
