--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -6,25 +6,31 @@
     <title>Minecraft IDE Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- for pillbox -->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="./js/communicator.js"></script>
     <!-- <script type="text/javascript" src="./js/structure.js"></script> -->
 </head>
-<body id="bodyEl">
+
+<body>
     <div id="faded"></div>
     <div id="popUp">
         <h1>Connect:</h1>
-        <p>Copy and Paste this Command in Minecraft to a Establish Connection</p>
+        <p>Copy and Paste this command in Minecraft to establish a Connection.</p>
         <div id="copy-input-div">
-            <input type="text" value="/connect localhost:8765" id="myInput" readonly/>
+            <input type="text" value="/connect localhost:8765" id="myInput" readonly />
             <button id="copy-button"></button>
         </div>
         <button id="dismiss-button" onclick="dismissPopUp(this)">I'm Connected!</button>
     </div>
-    <div id="header-section"></div>
+    <div id="header-section">
+        <ul class="nav">
+            <li><a href="index.html">IDE</a></li>
+            <li><a href="ajax.html">Lessons</a></li>
+        </ul>
+    </div>
     <div class="selector-div">
         <select class="event-selector" name="events[]" multiple="multiple">
             <option value="BlockPlaced">Block Placed</option>
@@ -44,8 +50,9 @@
         </div>
     </div>
     <div id="bottom-section">
-        <button type="button" id="add-button" class="minecraft-button">ADD</button>
+        <button type="button" id="add-button" class="minecraft-button">ADD TEXT AREA</button>
         <button type="button" id="run-all-button" class="minecraft-button" style="display: none;">RUN ALL</button>
     </div>
 </body>
+
 </html>
