--- a/react_simple/static/index.html
+++ b/react_simple/static/index.html
@@ -6,20 +6,22 @@
     <title>Minecraft IDE Editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/> <!-- Pillbox -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <!-- Pillbox -->
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script type="text/javascript" src="./js/communicator.js"></script>
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script> <!-- React -->
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script> 
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 </head>
+
 <body id="bodyEl">
     <div id="faded"></div>
     <div id="popUp">
         <h1>Connect:</h1>
         <p>Copy and Paste this Command in Minecraft to a Establish Connection</p>
         <div id="copy-input-div">
-            <input type="text" value="/connect localhost:8765" id="myInput" readonly/>
+            <input type="text" value="/connect localhost:8765" id="myInput" readonly />
             <button id="copy-button"></button>
         </div>
         <button id="dismiss-button" onclick="dismissPopUp(this)">I'm Connected!</button>
@@ -48,4 +50,5 @@
         <button type="button" id="run-all-button" class="minecraft-button" style="display: none;">RUN ALL</button>
     </div>
 </body>
+
 </html>
