Updating event subscription list with all available events

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -33,10 +33,7 @@
     </div>
     <!-- <button type="button" id="lessons-button" class="minecraft-button">Lessons</button> -->
     <div class="selector-div">
-        <select class="event-selector" name="events[]" multiple="multiple">
-            <option value="BlockPlaced">Block Placed</option>
-            <option value="BlockBroken">Block Broken</option>
-            <option value="ItemDropped">Item Dropped</option>
+        <select id="subscription-selector" class="event-selector" name="events[]" multiple="multiple">
         </select>
         <button type="button" id="update-button" class="minecraft-button">Update</button>
     </div>
