--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -44,15 +44,16 @@
                 <button type="button" class="run-button minecraft-button">RUN</button>
                 <button type="button" class="remove-button minecraft-button">REMOVE</button>
             </div>
-            <div class="code-input" contenteditable="true" spellcheck="false" role="textbox"><br><br><br><br><br></div>
+            <div class="code-input" contenteditable="true" spellcheck="false" role="textbox"><br><br><br><br><br>
+            </div>
             <div class="code-output"></div>
         </div>
     </div>
-    <div id="lessons-window">
-    </div>
     <div id="bottom-section">
         <button type="button" id="add-button" class="minecraft-button">ADD TEXT AREA</button>
-        <button type="button" id="run-all-button" class="minecraft-button" style="display: none;">RUN ALL</button>
+        <!-- <button type="button" id="run-all-button" class="minecraft-button" style="display: none;">RUN ALL</button> -->
+    </div>
+    <div id="lessons-window">
     </div>
 </body>
 
