last CSS touch-up

--- a/http_simple/static/index.html
+++ b/http_simple/static/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div id="bottom-section">
-            <button type="button" id="add-button" class="minecraft-button">ADD TEXT AREA</button>
+            <button type="button" id="add-button" class="minecraft-button">ADD CODE BLOCK</button>
         </div>
         <div id="lessons-window">
         </div>
